--- a/snakegame.html
+++ b/snakegame.html
@@ -16,7 +16,7 @@
     }
 
     canvas {
-      border: 1px solid #000;
+      border: 2px solid #000;
     }
 
     #menu {
@@ -26,22 +26,23 @@
       left: 50%;
       transform: translate(-50%, -50%);
       background-color: #fff;
-      padding: 20px;
-      border: 2px solid #000;
+      padding: 40px;
+      border: 4px solid #000;
       text-align: center;
     }
 
     #menu h1 {
-      margin: 0 0 20px;
+      margin: 0 0 30px;
     }
 
     #restartBtn {
-      padding: 10px;
+      padding: 20px;
       background-color: #008000;
       color: #fff;
       border: none;
       cursor: pointer;
-      margin: 0 10px;
+      margin: 0 20px;
+      font-size: 18px;
     }
   </style>
   <title>Snake Game</title>
@@ -58,9 +59,9 @@
     // Game variables
     const canvas = document.getElementById("snakeCanvas");
     const ctx = canvas.getContext("2d");
-    const boxSize = 20;
-    const gridSize = 20;
-    let snake = [{ x: 10, y: 10 }];
+    const boxSize = 40;
+    const gridSize = 40;
+    let snake = [{ x: 5, y: 5 }];
     let food = getRandomFoodPosition();
     let direction = "right";
     let score = 0;
@@ -117,8 +118,8 @@
       drawRoundedRect(food.x * gridSize, food.y * gridSize, boxSize, boxSize, 5);
 
       ctx.fillStyle = "#000";
-      ctx.font = "20px Arial";
-      ctx.fillText("Score: " + score, 10, 30);
+      ctx.font = "30px Arial";
+      ctx.fillText("Score: " + score, 10, 50);
     }
 
     // Move the snake
@@ -171,7 +172,7 @@
 
     // Reset the game
     function resetGame() {
-      snake = [{ x: 10, y: 10 }];
+      snake = [{ x: 5, y: 5 }];
       food = getRandomFoodPosition();
       direction = "right";
       score = 0;
